# velox

./: .coverage  .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  __init__.py  __main__.py  admin.py  auth.py  cache.py  cli.py  config.py  core.py  csrf.py  database.py  deploy.bat  exceptions.py  files.py  forms.py  log.py  mail.py  middleware.py  migrations.py  paginator.py  pyproject.toml  request.py  response.py  serializers.py  session.py  signals.py  swagger.py  task_progress.md  template.py  testing.py  validators.py  websocket-test.html  websocket.py
.github/workflows/: docs.yml  pypi.yml  tests.yml
assets/: __init__.py  admin.css  admin.js
docs/_build/html/: .buildinfo  .buildinfo.bak  api.html  configuration.html  database.html  genindex.html  index.html  installation.html  objects.inv  project_structure.html  py-modindex.html  quickstart.html  routing.html  search.html  searchindex.js  static_files.html  templates.html
docs/_build/html/.doctrees/: api.doctree  configuration.doctree  database.doctree  environment.pickle  index.doctree  installation.doctree  project_structure.doctree  quickstart.doctree  routing.doctree  static_files.doctree  templates.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_sources/: database.rst.txt  index.rst.txt  project_structure.rst.txt  quickstart.rst.txt  routing.rst.txt  static_files.rst.txt  templates.rst.txt
docs/source/: admin.rst  api.rst  auth.rst  cache.rst  cli.rst  conf.py  configuration.rst  database.rst  forms.rst  index.rst  installation.rst  mail.rst  migrations.rst  paginator.rst  quickstart.rst  serializers.rst  session.rst  signals.rst  swagger.rst  templates.rst  validators.rst  websocket.rst
tests/: test_core.py
(+4 files in other folders)
